--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1863,6 +1863,85 @@ a.tag:hover {
 	background-color: #333;
 }
 
+/* Media query overrides for bootstrap 3 collapse breakpoint */
+/* Extended from https://stackoverflow.com/a/36289507/3288102 */
+@media (max-width: 992px) {
+	.navbar-right .visible-xs {
+		display: block !important;
+	}
+
+	.container > .navbar-collapse {
+		margin-right: -15px;
+		margin-left: -15px;
+	}
+
+	.navbar-nav {
+		margin: 7.5px -15px;
+	}
+
+	.navbar-right.hidden-xs {
+		display: none !important;
+	}
+
+	.navbar-nav .open .dropdown-menu {
+		position: static;
+		float: none;
+		width: auto;
+		margin-top: 0;
+		background-color: transparent;
+		border: 0;
+		box-shadow: none;
+	}
+
+	.navbar > .container {
+		width: 100%;
+	}
+
+	.navbar-header {
+		float: none;
+	}
+
+	.navbar-left, .navbar-right {
+		float: none !important;
+	}
+
+	.navbar-toggle {
+		display: block;
+	}
+
+	.navbar-collapse {
+		border-top: 1px solid transparent;
+		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+	}
+
+	.navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+
+	.navbar-collapse.collapse {
+		display: none !important;
+	}
+
+	.navbar-nav {
+		float: none !important;
+		margin-top: 7.5px;
+	}
+
+	.navbar-nav > li {
+		float: none;
+	}
+
+	.navbar-nav > li > a {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
+	.collapse.in {
+		display: block !important;
+	}
+}
+
 @media (max-width: 768px) {
     #sharing-status {
         border-left: 0
@@ -2032,13 +2111,6 @@ a.tag:hover {
   .bs-sidebar.affix-bottom,
   .bs-sidebar.affix {
     width: 360px;
-  }
-}
-
-@media(min-width: 767px) and (max-width: 991px){
-  /* Add extra padding to push down the text */
-  .page-tip {
-    padding: 50px 0px 15px;
   }
 }
 
