Update contact info

--- a/hs_core/templates/pages/groups-unauthenticated.html
+++ b/hs_core/templates/pages/groups-unauthenticated.html
@@ -141,7 +141,7 @@
                     {% endif %}
                 {% endfor %}
             {% else %}
-                <div class="col-sm-12"><i>No groups have been created yet.</i>
+                <div class="col-sm-12"><i>No groups are listing public resources.</i>
                 </div>
             {% endif %}
         </div>
