--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -209,8 +209,8 @@
                                        title-left="Available Topics" title-right="Selected Topics"
                                        moved-item-location="bottom" v-on:item-moved="itemMoved" v-cloak>
                                 </mover>
-                                <a style="cursor:help" title="To add Topics make a request to admin@criticalzone.org"
-                                   href="mailto:admin@criticalzone.org?subject=New%20HydroShare%20Topic">To add a new topic, email the admin</a><br/>
+                                <a style="cursor:help" title="To add Topics make a request to CriticalZoneOrg@gmail.com"
+                                   href="mailto:CriticalZoneOrg@gmail.com?subject=New%20HydroShare%20Topic">To add a new topic, email the admin</a><br/>
                                 <input class="title-builder-input" id="resource-subtopic" v-model="subtopic"
                                        v-on:keyup="updateTitle()" size="51"
                                        maxlength="50" placeholder="Optional Custom Text"/><br/>
