--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -29,6 +29,7 @@
                     {% else %}
                         <div id="cv-add-keyword-wrapper" class="input-group">
                             <input v-model="newKeyword" id="txt-keyword" type="text" class="form-control"
+                                   ref="newKeyword"
                                    @keyup.enter="addKeyword('{{ cm.short_id }}')"
                                    placeholder="Examples: Hydrologic_modeling, USU, land use">
                             <span class="input-group-btn">
