Remove conditional before data pre processing

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -204,6 +204,9 @@
                                         </div>
                                     </template>
                                 </div>
+                                <div v-if="addAuthorError" class="alert alert-danger space-top">
+                                    ${addAuthorError}
+                                </div>
                             </div>
 
                             <div class="modal-footer">
