--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -99,6 +99,7 @@
                                :is_updating_author="isUpdatingAuthor"
                                :is_deleting_author="isDeletingAuthor"
                                :is_person="isPerson"
+                               :edit_author_error="editAuthorError"
                                :can_remove="authors.length > 1">
             </edit-author-modal>
 
