--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -204,9 +204,7 @@
                                         </div>
                                     </template>
                                 </div>
-                                <div v-if="addAuthorError" class="alert alert-danger space-top">
-                                    ${addAuthorError}
-                                </div>
+                                <div v-if="addAuthorError" v-html="addAuthorError" class="alert alert-danger space-top"></div>
                             </div>
 
                             <div class="modal-footer">
@@ -385,9 +383,7 @@
                                 </div>
                             </template>
                         </div>
-                        <div v-if="edit_author_error" class="alert alert-danger space-top">
-                          ${edit_author_error}
-                        </div>
+                        <div v-if="edit_author_error" v-html="edit_author_error" class="alert alert-danger space-top"></div>
                     </div>
 
                     <div class="modal-footer">
