[#3519] adding html code for option to create model program aggregation

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -208,6 +208,13 @@
                                  alt="Time Series Resource Icon" class="resource-type-icon"/>
                                 <span>Time Series</span>
                             </li>
+                            <li id="btn-set-model-program-file-type" data-menu-name="setmodelprogramfiletype"
+                                data-toggle="tooltip" data-placement="right" data-fb-action="setModelProgramFileType"
+                                title="Convert to a model program dataset to which you can add metadata">
+                                <img src="{{ STATIC_URL }}img/resource-icons/modelprogram48x48.png"
+                                 alt="Model Program Aggregation Icon" class="resource-type-icon"/>
+                                <span>Model Program</span>
+                            </li>
                         </ul>
                     </li>
                     <li data-fb-action="removeAggregation"
