Modify spacing of items in table

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1085,7 +1085,7 @@ table.info-table > tbody > tr > td {
     vertical-align: top;
 }
 
-.res-header table.info-table > tbody > tr > td {
+table.info-table > tbody > tr > td {
     padding-bottom: 8px;
 }
 
