--- a/irods_browser_app/templates/irods_signin.html
+++ b/irods_browser_app/templates/irods_signin.html
@@ -12,7 +12,7 @@
                         <input type="hidden" name="path" value="{{ request.path }}"/>
                         <div class="form-group">
                             <label for="id_username">iRODS Username: </label>
-                            <input id="username" class="form-control" name="username" placeholder="Username" value="" type="text" />
+                            <input id="username" class="form-control" name="username" placeholder="Username" value="{{ user.username }}" type="text" />
                         </div>
                         <div class="form-group">
                             <label for="id_password">iRODS Password:</label>
